# png-from-pdf-extracter

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: test.yml
.specify/memory/: constitution.md
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  troubleshooting.md
specs/001-pdf-to-png-mailer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pdf-to-png-mailer/checklists/: requirements.md
specs/001-pdf-to-png-mailer/contracts/: service-contracts.md
src/: config.py  main.py
src/models/: email_message.py  pdf_attachment.py  png_image.py  processing_job.py
src/services/: imap_service.py  job_processor.py  pdf_converter.py  smtp_service.py  whitelist_service.py
src/utils/: file_utils.py  logging.py
tests/contract/: test_cc_functionality.py  test_ghostscript.py  test_imagemagick.py  test_imap_reliability.py  test_smtp_service.py
tests/integration/: test_cc_flow.py  test_daemon_resilience.py  test_end_to_end.py  test_error_notification.py  test_whitelist_flow.py
tests/unit/: conftest.py  test_config.py  test_imap_service.py  test_job_processor.py  test_models.py  test_pdf_converter.py  test_smtp_service.py  test_whitelist_service.py
